ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/04_invalid_record_multidecl.lava
record Circle(float r);
Circle a, b;
